--- a/client/package.json
+++ b/client/package.json
@@ -2,37 +2,33 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^5.13.0",
-    "@mui/styles": "^6.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.7.7",
     "cannon": "^0.6.2",
-    "gsap": "^3.11.5",
-    "i18n-iso-countries": "^7.4.0",
-    "jquery": "^3.6.4",
+    "gsap": "^3.8.0",
+    "i18n-iso-countries": "^7.2.0",
+    "jquery": "^3.6.0",
     "json-fn": "^1.1.1",
     "jwt-decode": "^3.1.2",
     "npm-watch": "^0.11.0",
-    "postprocessing": "^6.30.0",
-    "react": "^18.0.0",
+    "postprocessing": "^6.29.3",
+    "react": "^17.0.2",
     "react-cookie": "^4.1.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-frame-component": "^5.1.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.14.0",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.5.4",
-    "three": "^0.157.0",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
+    "three": "^0.133.1",
+    "web-vitals": "^1.1.2"
   },
   "watch": {
     "build": {
